fix mergeTask issue